
<resources>
    android:labelFor="nm"
    <string name="app_name">Matrimony App</string>
    <string name="register">Register</string>

    <string name="name">Name</string>
    <string name="email">Email</string>
    <string name="phone">Phone</string>
    <string name="date_of_birth">Date Of Birth</string>
    <string name="qualification">Qualification</string>
    <string name="password">Password</string>
    <string name="Reg">btn</string>
    <string name="signIn">SignIn</string>

    <string name="SignInLabel">User Sign IN</string>
    <string name="userIdLabel">User ID</string>
    <string name="userID">Enter UserID</string>
    <string name="PasswordLabel">Password</string>
    <string name="Password2">Enter Password</string>
    <string name="Login">Login</string>
    <string name="Edit">edituser</string>

    <string name="Name">name</string>
    <string name="Email">email</string>
    <string name="Phone">phone</string>
    <string name="DOB">dob</string>
    <string name="Qualification">qualification</string>



</resources>