<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/matrimony"
        android:orientation="vertical"
        tools:layout_editor_absoluteX="20dp"
        tools:layout_editor_absoluteY="20dp">

        <TextView
            android:id="@+id/title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:background="#FF5722"
            android:contentDescription="@string/register"
            android:gravity="center"
            android:text="@string/register"
            android:textColor="#FDF8C8"
            android:textSize="30sp"
            android:textStyle="bold" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="10dp"
            android:orientation="vertical">

            <EditText
                android:id="@+id/name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:autofillHints=""
                android:contentDescription="@string/name"
                android:ems="10"
                android:inputType="textPersonName"
                android:text="@string/name"
                android:textColor="#FDF8C8"
                android:textSize="24sp"
                android:textStyle="bold"
                />

            <EditText
                android:id="@+id/mail"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:contentDescription="@string/email"
                android:ems="10"
                android:importantForAutofill="no"
                android:inputType="textEmailAddress"
                android:text="@string/email"
                android:textColor="#FDF8C8"
                android:textSize="24sp"
                android:textStyle="bold" />

            <EditText
                android:id="@+id/Phn"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:contentDescription="@string/phone"
                android:ems="10"
                android:importantForAutofill="no"
                android:inputType="phone"
                android:text="@string/phone"
                android:textColor="#FDF8C8"
                android:textSize="24sp"
                android:textStyle="bold" />

            <EditText
                android:id="@+id/dob"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:contentDescription="@string/date_of_birth"
                android:ems="10"
                android:importantForAutofill="no"
                android:inputType="date"
                android:text="@string/date_of_birth"
                android:textColor="#FDF8C8"
                android:textSize="24sp"
                android:textStyle="bold" />

            <EditText
                android:id="@+id/quali"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:contentDescription="@string/qualification"
                android:ems="10"
                android:importantForAutofill="no"
                android:inputType="textPersonName"
                android:text="@string/qualification"
                android:textColor="#FDF8C8"
                android:textSize="24sp"
                android:textStyle="bold" />

            <EditText
                android:id="@+id/pwd"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:autofillHints=""
                android:contentDescription="@string/password"
                android:ems="10"
                android:inputType="textPersonName"
                android:text="@string/password"
                android:textColor="#FDF8C8"
                android:textSize="24sp"
                android:textStyle="bold" />

            <Button
                android:id="@+id/Registerbutton"
                android:layout_width="wrap_content"
                android:layout_height="45dp"
                android:layout_gravity="center"
                android:layout_margin="10dp"
                android:background="#FF5722"
                android:contentDescription="@string/Reg"
                android:text="@string/register"
                android:textColor="#FDF8C8"
                android:textSize="24sp"
                android:textStyle="bold" />

            <Button
                android:id="@+id/btn2"
                android:layout_width="163dp"
                android:layout_height="45dp"
                android:layout_gravity="center"
                android:background="#FF5722"
                android:contentDescription="@string/signIn"
                android:onClick="sign"
                android:text="@string/signIn"
                android:textColor="#FDF8C8"
                android:textSize="24sp"
                android:textStyle="bold" />

        </LinearLayout>

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>