<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/matrimony"
    android:orientation="vertical">

    <LinearLayout
        android:id="@+id/Loginpage"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="40dp"
        android:orientation="vertical">

        <TextView
            android:id="@+id/Loginlabel"
            android:layout_width="100dp"
            android:layout_height="0dp"
            android:layout_marginTop="50dp"
            android:layout_weight="1"
            android:background="#FF5722"
            android:contentDescription="@string/SignInLabel"
            android:gravity="center"
            android:text="@string/SignInLabel"
            android:textColor="#FDF8C8"
            android:textSize="24sp"
            android:textStyle="bold" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/EmailLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="100dp">

        <TextView
            android:id="@+id/Emaillabel"
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:contentDescription="@string/userIdLabel"
            android:gravity="center"
            android:text="@string/userIdLabel"
            android:textColor="#FDF8C8"
            android:textSize="24sp"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/LoginEmail"
            android:layout_width="196dp"
            android:layout_height="45dp"
            android:layout_marginLeft="50dp"
            android:background="#FDF8C8"
            android:contentDescription="@string/userID"
            android:ems="10"
            android:inputType="textPersonName"
            android:text="@string/userID"
            android:textSize="24sp" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/PasswordLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp"
        android:layout_marginRight="50dp"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/PasswordLabel"
            android:layout_width="5dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:contentDescription="@string/PasswordLabel"
            android:gravity="center"
            android:text="@string/PasswordLabel"
            android:textColor="#FDF8C8"
            android:textSize="24sp"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/LoginPassword"
            android:layout_width="60dp"
            android:layout_height="45dp"
            android:layout_marginLeft="10dp"
            android:layout_weight="1"
            android:background="#FDF8C8"
            android:contentDescription="@string/Password2"
            android:ems="10"
            android:inputType="textPassword"
            android:text="@string/Password2" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/LoginButtonLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="20dp"
        android:gravity="center"
        android:onClick="sign1"
        android:orientation="vertical">

        <Button
            android:id="@+id/LoginButton"
            android:layout_width="wrap_content"
            android:layout_height="45dp"
            android:layout_gravity="center"
            android:layout_marginTop="60dp"
            android:background="#FF5722"
            android:contentDescription="@string/Login"
            android:gravity="center"
            android:text="@string/Login"
            android:textSize="24sp"
            android:textStyle="bold" />

    </LinearLayout>

</LinearLayout>